# calipso

./: .gitignore  CLAUDE.md  Taskfile.yml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/infrastructure/: README.md  ci.md  nix.md  taskfile.md
docs/src/overview/: README.md  components.md  project-structure.md
docs/src/vision/: README.md
src/calipso/: agent.py  cli.py  cmd.py  model.py  runner.py  server.py  summarizer.py  widget.py
src/calipso/capabilities/: __init__.py  action_log.py  goal.py  task_list.py
src/calipso/static/: index.html
src/calipso/widgets/: __init__.py  action_log.py  agents_md.py  code_explorer.py  context.py  conversation.py  conversation_log.py  file_explorer.py  goal.py  system_prompt.py  task_list.py  test_suite.py  token_usage.py
tests/: test_action_log.py  test_agent.py  test_code_explorer.py  test_context.py  test_conversation_log.py  test_goal.py  test_runner.py  test_server.py  test_task_list.py  test_token_usage.py  test_view_html.py  test_widgets.py
