[project]
name = "calipso"
version = "0.1.0"
description = "An AI coding agent that uses interactive widgets as tools, manipulable via DSLs."
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "aiohttp>=3.9",
    "markdown>=3.6",
]

[project.scripts]
calipso = "calipso.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "anyio",
    "pytest-anyio",
    "dirty-equals",
]
